ci(scripts): Fix issue where incorrect version was being bumped to

--- a/.github/workflows/create_release.yaml
+++ b/.github/workflows/create_release.yaml
@@ -77,7 +77,7 @@ jobs:
       uses: octokit/request-action@v2.x
       with:
         route: PUT /repos/${{ github.repository }}/pulls/${{ env.PULL_NUMBER }}/merge
-        commit_title: Prepare release v${{ env.VERSION }} (#${{ env.PULL_NUMBER }})
+        commit_title: "release: Prepare v${{ env.VERSION }} (#${{ env.PULL_NUMBER }})"
         merge_method: squash
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
