--- a/.github/workflows/page.yaml
+++ b/.github/workflows/page.yaml
@@ -33,6 +33,8 @@ jobs:
 
       - name: Upload artifact
         uses: actions/upload-artifact@v3
+        with:
+          path: "_site/"
 
   deploy:
     needs: build
