--- a/.github/workflows/page.yaml
+++ b/.github/workflows/page.yaml
@@ -35,6 +35,8 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           path: "_site/"
+          name: github-pages
+          if-no-files-found: error
 
   deploy:
     needs: build
