ci: Fix incorrect permissions for page workflow

--- a/.github/workflows/page.yaml
+++ b/.github/workflows/page.yaml
@@ -31,6 +31,12 @@ jobs:
         env:
           VERSION: ${{ steps.bump_version.outputs.version }}
 
+      - name: Fix permissions
+        run: |
+          chmod -c -R +rX "_site/" | while read line; do
+            echo "::warning title=Invalid file permissions automatically fixed::$line"
+          done
+
       - name: Upload artifact
         uses: actions/upload-artifact@v2
         with:
