--- a/.github/workflows/page.yaml
+++ b/.github/workflows/page.yaml
@@ -5,11 +5,24 @@ on:
     branches: [ main ]
   workflow_dispatch: {}
 
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
+concurrency:
+  group: "pages"
+  cancel-in-progress: false
+
 jobs:
-  build:
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout
+        uses: actions/checkout@v3
 
       - name: Check branch
         run: |
@@ -18,7 +31,7 @@ jobs:
             exit 1
           fi
 
-      - name: Bump version
+      - name: Get upcoming version
         id: bump_version
         run: |
           version=`scripts/ci/bump_version.py --dry-run`
@@ -31,23 +44,14 @@ jobs:
         env:
           VERSION: ${{ steps.bump_version.outputs.version }}
 
+      - name: Setup Pages
+        uses: actions/configure-pages@v3
+
       - name: Upload artifact
         uses: actions/upload-artifact@v1
         with:
           path: "_site/"
-          name: github-pages
-          if-no-files-found: error
 
-  deploy:
-    needs: build
-    permissions:
-      pages: write
-      id-token: write
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-    runs-on: ubuntu-latest
-    steps:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v2
