--- a/.github/workflows/page.yaml
+++ b/.github/workflows/page.yaml
@@ -44,11 +44,8 @@ jobs:
         env:
           VERSION: ${{ steps.bump_version.outputs.version }}
 
-      - name: Setup Pages
-        uses: actions/configure-pages@v3
-
       - name: Upload artifact
-        uses: actions/upload-artifact@v1
+        uses: actions/upload-pages-artifact@v2
         with:
           path: "_site/"
 
